# HW_20.1

./: data.json  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_product_description.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_list.html  sneakers.html  sneakers_id.html  sneakers_list.html
catalog/templatetags/: tags.py
online_store/: settings.py  urls.py
