[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["User <lenovnikolas@gmail.com>"]
readme = "README.md"
packages = [{include = "online_store"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
psycopg2 = "^2.9.6"
pillow = "^10.0.0"
ipython = "^8.14.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

